added calc histories
