# app/Models/User.php
@@ -55,4 +55,7 @@ class User extends Authenticatable
     public function orders(){
         return $this->hasMany(Order::class);
     }
+    public function calcHistory(){
+      return $this->hasMany(CalcHistory::class);
+  }
 }
