# storage/api-docs/api-docs.json
@@ -290,6 +290,78 @@
                 }
             }
         },
+        "/api/calc/histories": {
+            "get": {
+                "tags": [
+                    "CalcHistory"
+                ],
+                "summary": "Get list of Calc history",
+                "operationId": "b2881b46f8722b2296c6a6c94fe9b2a0",
+                "parameters": [
+                    {
+                        "name": "X-Localization",
+                        "in": "header",
+                        "description": "Localization",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "ru": {
+                                "summary": "Russian",
+                                "value": "ru"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "SUCCESS",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/api/calc/histories/{id}": {
+            "delete": {
+                "tags": [
+                    "CalcHistory"
+                ],
+                "summary": "Summary",
+                "description": "CalcHistory",
+                "operationId": "Delete CalcHistory",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": "1"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "SUCCESS"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
         "/api/cars": {
             "get": {
                 "tags": [
@@ -1988,13 +2060,13 @@
                 ]
             }
         },
-        "/api/orders/store": {
+        "/api/calc/histories/store": {
             "post": {
                 "tags": [
-                    "Orders"
+                    "CalcHistory"
                 ],
-                "summary": "Store Order",
-                "operationId": "e99cabc845ac77b9836899e8c3fd3a30",
+                "summary": "Store Calc History",
+                "operationId": "a7d5c3f6ac511f1153fda876a39c8782",
                 "parameters": [
                     {
                         "name": "X-Localization",
@@ -2251,82 +2323,6 @@
                         "bearer_token": []
                     }
                 ]
-            }
-        },
-        "/api/orders/accept/{order_id}": {
-            "post": {
-                "tags": [
-                    "Orders"
-                ],
-                "summary": "Executer Accept Order",
-                "operationId": "88433c0c1de5d3551d0a94a04b5ab9dd",
-                "parameters": [
-                    {
-                        "name": "order_id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "example": "1"
-                        }
-                    },
-                    {
-                        "name": "X-Localization",
-                        "in": "header",
-                        "description": "Localization",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "examples": {
-                            "ru": {
-                                "summary": "Russian",
-                                "value": "ru"
-                            }
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "SUCCESS"
-                    }
-                },
-                "security": [
-                    {
-                        "bearer_token": []
-                    }
-                ]
-            }
-        },
-        "/api/order-statuses": {
-            "get": {
-                "tags": [
-                    "Orders"
-                ],
-                "summary": "Get list of Order Statuses",
-                "operationId": "3a002ba5924af70e7b8f3e1440fba633",
-                "parameters": [
-                    {
-                        "name": "X-Localization",
-                        "in": "header",
-                        "description": "Localization",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "examples": {
-                            "ru": {
-                                "summary": "Russian",
-                                "value": "ru"
-                            }
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "SUCCESS"
-                    }
-                }
             }
         },
         "/api/taxes": {
